# catch2_test

./: CMakeLists.txt
.github/workflows/: main.yml
src/: CMakeLists.txt
test/: CMakeLists.txt
test/Source/: main.cpp
test/contrib/: ParseAndAddCatchTests.cmake
